<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableActivity">


    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="386dp"
        android:layout_height="170dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/img_1" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="381dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="82dp"
            android:layout_height="35dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="248dp"
            android:layout_height="62dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/EnterName" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="380dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="82dp"
            android:layout_height="33dp"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="245dp"
            android:layout_height="61dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/EnterPhone" />
    </TableRow>

    <TableRow
        android:layout_width="383dp"
        android:layout_height="115dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow3">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:text="@string/address" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="231dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/EnterAddress" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btnSubmit2" />
    </TableRow>

</TableLayout>